--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,13 +14,13 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "192.168.31.232",
+    "host": "10.5.103.87",
     "user": "root",
     "password": "11",
     //"password": "password",
     //"port": "22",
     
-    "remote_path": "/websrv/www/htdocs/sanyou/",
+    "remote_path": "/websrv/www/sanyou/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
